hphp/hack/test/typecheck/reactive/memoize_mutable3.php
<?hh // partial

class A {
  <<__Rx, __Memoize, __Mutable>>
  public function f(): int {
    return 1;
  }
}
